Fix bugs after merging with Kine - Change GC config (oh yeah)